--- a/src/main/resources/templates/edit-compte.html
+++ b/src/main/resources/templates/edit-compte.html
@@ -11,15 +11,15 @@
 		<table>
 			<tr>
 				<td>Rib</td>
-				<td><input type="text" name="rib" th:value="${compte.rib}" readonly</td>
+				<td><input type="text" name="rib" th:value="${bankAccount.rib}" readonly</td>
 			</tr>
 			<tr>
 				<td>nomClient</td>
-				<td><input type="text" name="nomClient" th:value="${compte.nomClient}"></td>
+				<td><input type="text" name="nomClient" th:value="${bankAccount.nomClient}"></td>
 			</tr>
 			<tr>
 				<td>solde</td>
-				<td><input type="text" name="solde" th:value="${compte.solde}"></td>
+				<td><input type="text" name="solde" th:value="${bankAccount.solde}"></td>
 			</tr>
 			<tr>
 				<td></td>
