--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -10,6 +10,8 @@
             <title>Dashboard - SB Admin</title>
             <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
             <link href="/css/styles.css" rel="stylesheet" />
+            <link href="/css/jquery.dataTables.min.css" rel="stylesheet" />
+            <script src="/js/jquery-3.7.1.min.js"></script>
             <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         </head>
     </th:block>
@@ -141,6 +143,7 @@
             <script src="/assets/demo/chart-bar-demo.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
             <script src="/js/datatables-simple-demo.js"></script>
+            <script src="/js/jquery.dataTables.min.js"></script>
         </th:block>
     </body>
 </html>
