--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,8 +8,11 @@
             <meta name="description" content="" />
             <meta name="author" content="" />
             <title>Dashboard - SB Admin</title>
+            <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
             <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
             <link href="/css/styles.css" rel="stylesheet" />
+            <link href="/css/jquery.dataTables.min.css" rel="stylesheet" />
             <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         </head>
     </th:block>
@@ -140,7 +143,8 @@
             <script src="/assets/demo/chart-area-demo.js"></script>
             <script src="/assets/demo/chart-bar-demo.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
-            <script src="/js/datatables-simple-demo.js"></script>
+<!--            <script src="/js/datatables-simple-demo.js"></script>-->
+            <script src="/js/jquery.dataTables.min.js"></script>
         </th:block>
     </body>
 </html>
