add modal and some fixes

--- a/src/main/resources/templates/accounts-list.html
+++ b/src/main/resources/templates/accounts-list.html
@@ -12,7 +12,7 @@
             <!-- ONLY REPLACE HERE -->
             <div class="container-fluid px-4">
 
-                <h1 class="mt-4">Tables</h1>
+                <h1 class="mt-4">Accounts</h1>
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
                     <li class="breadcrumb-item active">Tables</li>
@@ -22,7 +22,7 @@
                         <div class="card-header d-flex justify-content-between align-items-center">
                             <div>
                                 <i class="fas fa-table me-1"></i>
-                                DataTable Example
+                                account's table
                             </div>
                             <div>
                                 <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#addAccountModal">
@@ -35,7 +35,7 @@
                                 <thead>
                                 <tr>
                                     <th>RIB</th>
-                                    <th>balance</th>
+                                    <th>Balance</th>
                                     <th>Client</th>
                                     <th>Cin</th>
                                     <th>Actions</th>
