--- a/src/main/resources/templates/clients-list.html
+++ b/src/main/resources/templates/clients-list.html
@@ -91,35 +91,35 @@
         </div>
     </div>
 </div>
-<div class="modal fade" id="edit-client-modal" tabindex="-1" aria-labelledby="addClientModalLabel" aria-hidden="true">
+<div class="modal fade" id="edit-client-modal" tabindex="-1" aria-labelledby="editClientModel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="editModalLabel">Add New Client</h5>
+                <h5 class="modal-title" id="editModalLabel">Edit Client</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form th:action="@{edit}" method="POST">
+            <form>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="FirstNameEdit" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="FirstNameEdit" name="firstName">
+                        <label for="edit-first-name" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="edit-first-name" name="firstName">
                     </div>
                     <div class="mb-3">
-                        <label for="LastNameEdit" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="LastNameEdit" name="lastName">
+                        <label for="edit-last-name" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="edit-last-name" name="lastName">
                     </div>
                     <div class="mb-3">
-                        <label for="AddressEdit" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="AddressEdit" name="address">
+                        <label for="edit-address" class="form-label">Address</label>
+                        <input type="text" class="form-control" id="edit-address" name="address">
                     </div>
                     <div class="mb-3">
-                        <label for="CINEdit" class="form-label">CIN</label>
-                        <input type="text" class="form-control" id="CINEdit" name="cin" disabled>
+                        <label for="edit-cin" class="form-label">CIN</label>
+                        <input type="text" class="form-control" id="edit-cin" name="cin">
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Add Client</button>
+                    <button type="button" class="btn btn-primary" id="edit-client-button">Edit Client</button>
                 </div>
             </form>
         </div>
