--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -142,7 +142,9 @@
             <script src="/assets/demo/chart-area-demo.js"></script>
             <script src="/assets/demo/chart-bar-demo.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js" crossorigin="anonymous"></script>
+            <script src="/js/sweetalert.min.js"></script>
             <script src="/js/datatables-simple-demo.js"></script>
+            <script src="/js/clients.js"></script>
             <script src="/js/jquery.dataTables.min.js"></script>
         </th:block>
     </body>
