--- a/src/main/resources/templates/clients-list.html
+++ b/src/main/resources/templates/clients-list.html
@@ -21,7 +21,7 @@
                         <li th:each="errorMessage : ${errorMessages}" th:text="${errorMessage}"></li>
                     </ul>
                 </div>
-                <div class="card mb-4">
+                <div class="card mb-4" id="table">
                     <div class="card-header d-flex justify-content-end">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#add-client-modal"><i class="fa-solid fa-plus"></i> Add Client</button>
                     </div>
@@ -64,7 +64,7 @@
                 <h5 class="modal-title" id="exampleModalLabel">Add New Client</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <form th:action="@{save}" method="POST">
+            <form th:action="@{/clients/save}" method="POST">
                 <div class="modal-body">
                         <div class="mb-3">
                             <label for="FirstName" class="form-label">First Name</label>
