--- a/src/main/resources/templates/accounts-list.html
+++ b/src/main/resources/templates/accounts-list.html
@@ -118,30 +118,18 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <!-- Start of form -->
-            <form action="/accounts/save2" method="post">
+            <form action="/accounts/save" method="post">
                 <div class="modal-body">
-<!--                    &lt;!&ndash; RIB input field &ndash;&gt;-->
-<!--                    <div class="mb-3">-->
-<!--                        <label for="newRIB" class="form-label">RIB:</label>-->
-<!--                        <input type="text" id="newRIB" name="rib" class="form-control" required />-->
-<!--                    </div>-->
-                    <!-- Balance input field -->
+
                     <div class="mb-3">
                         <label for="newBalance" class="form-label">Balance:</label>
                         <input type="number" id="newBalance" name="balance" class="form-control" required />
                     </div>
                     <!-- Client select dropdown -->
                     <div class="mb-3">
-                        <label for="selectClient" class="form-label">Select Client:</label>
-                        <select id="selectClient" name="clientCin" class="form-control" required>
-                            <option value="">Please select a client</option>
-                            <!-- Dynamic options using Thymeleaf -->
-                            <option th:each="client : ${clients}"
-                                    th:value="${client.cin}"
-                                    th:text="${client.firstName + ' ' + client.lastName + ' ' + client.cin}">
-                                Client Name
-                            </option>
-                        </select>
+                        <label for="client" class="form-label">Client:</label>
+                        <input type="text" id="client" class="form-control" required />
+                        <input type="text" id="client-id" name="cin" hidden />
                     </div>
                     <!-- Other form fields can be added here -->
                 </div>
@@ -161,52 +149,5 @@
 
 
 <th:block th:replace="~{layout :: scripts}"></th:block>
-<script src="/js/bankAccount.js"></script>
-<script src="/js/jquery-3.7.1.js"></script>
-<script src="/js/sweetalert.min.js"></script>
-
-
-<script>
-    $(document).ready(function () {
-        // Initialize DataTable
-        var dataTable = $('#datatablesSimple').DataTable();
-
-        // Handle button click event
-        $('#datatablesSimple tbody').on('click', '.editButton', function () {
-            // Get the data from the clicked row
-            var rowData = dataTable.row($(this).closest('tr')).data();
-
-            // Update modal input fields with DataTable values
-            $('#editRIB').val(rowData[0]);  // Assuming the first column is RIB
-            $('#editbalance').val(rowData[1]);  // Assuming the second column is balance
-            $('#editClient').val(rowData[2]);  // Assuming the third column is Client (combining first and last name)
-            $('#editCin').val(rowData[3]);
-
-            // Show the modal
-            $('#editAccountModal').show();
-        });
-        // Handle button click event for save changes
-        $('#saveAccountChangesButton').on('click', function () {
-            // Get the updated data from the modal inputs
-            var updatedData = {
-                rib: $('#editRIB').val(),
-                balance: $('#editbalance').val(),
-                // firstName: $('#editFirstName').val(),
-                // lastName: $('#editLastName').val(),
-                // cin: $('#editCin').val()
-            };
-            javascript:bankAccountEdit(updatedData.rib,updatedData.balance);
-        });
-
-
-
-
-
-
-    });
-</script>
-
-
-
 </body>
 </html>
