--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -14,6 +14,7 @@
             <link href="/css/jquery.dataTables.min.css" rel="stylesheet" />
             <script src="/js/jquery-3.7.1.min.js"></script>
             <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+            <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet">
         </head>
     </th:block>
 
@@ -147,6 +148,10 @@
             <script src="/js/datatables-simple-demo.js"></script>
             <script src="/js/clients.js"></script>
             <script src="/js/jquery.dataTables.min.js"></script>
+            <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js" ></script>
+            <script src="/js/bankAccount.js"></script>
+            <script src="/js/sweetalert.min.js"></script>
+            <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
         </th:block>
     </body>
 </html>
