Handle errors to redirect to error page

--- a/src/main/resources/templates/accounts-list.html
+++ b/src/main/resources/templates/accounts-list.html
@@ -60,6 +60,15 @@
                                     </td>
                                 </tr>
                                 </tbody>
+                                <tfoot>
+                                <tr>
+                                    <th>RIB</th>
+                                    <th>Balance</th>
+                                    <th>Client</th>
+                                    <th>Cin</th>
+                                    <th>Actions</th>
+                                </tr>
+                                </tfoot>
                             </table>
                         </div>
                     </div>
