--- a/src/main/resources/templates/accounts-list.html
+++ b/src/main/resources/templates/accounts-list.html
@@ -14,21 +14,14 @@
 
                 <h1 class="mt-4">Accounts</h1>
                 <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-                    <li class="breadcrumb-item active">Tables</li>
+                    <li class="breadcrumb-item"><i class="fa-solid fa-gauge-high"></i> Dashboard</li>
+                    <li class="breadcrumb-item active"><i class="fa-solid fa-credit-card"></i> Accounts</li>
                 </ol>
                     <div class="card mb-4">
-
-                        <div class="card-header d-flex justify-content-between align-items-center">
-                            <div>
-                                <i class="fas fa-table me-1"></i>
-                                account's table
-                            </div>
-                            <div>
-                                <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#addAccountModal">
+                        <div class="card-header d-flex justify-content-end">
+                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addAccountModal">
                                     <i class="fas fa-plus"></i> Add Account
                                 </button>
-                            </div>
                         </div>
                         <div class="card-body">
                             <table id="datatablesSimple">
