--- a/src/main/resources/templates/accounts-list.html
+++ b/src/main/resources/templates/accounts-list.html
@@ -16,55 +16,61 @@
                 <ol class="breadcrumb mb-4">
                     <li class="breadcrumb-item"><i class="fa-solid fa-gauge-high"></i> Dashboard</li>
                     <li class="breadcrumb-item active"><i class="fa-solid fa-credit-card"></i> Accounts</li>
+                    <li class="breadcrumb-item active" th:if="${client != null}"
+                        th:text="${client.firstName + ' ' + client.lastName}"></li>
                 </ol>
-                    <div class="card mb-4">
-                        <div class="card-header d-flex justify-content-end">
-                                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addAccountModal">
-                                    <i class="fas fa-plus"></i> Add Account
-                                </button>
-                        </div>
-                        <div class="card-body">
-                            <table id="datatablesSimple">
-                                <thead>
-                                <tr>
-                                    <th>RIB</th>
-                                    <th>Balance</th>
-                                    <th>Client</th>
-                                    <th>Cin</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr th:each="account : ${bankAccounts}" th:id="${'account-' + account.rib}">
-                                    <td th:text="${account.rib}">RIB</td>
-                                    <td th:text="${account.balance}">balance</td>
-                                    <!-- Combine first name and last name into a single "Client" cell -->
-                                    <td th:text="${account.client.firstName + ' ' + account.client.lastName}">Client Name</td>
-                                    <td th:text="${account.client.cin}">Cin</td>
-                                    <td>
-                                        <!-- Button to open the edit modal -->
-                                        <button type="button" class="btn btn-primary btn-sm editButton" data-bs-toggle="modal" data-bs-target="#editAccountModal">
-                                            <i class="fas fa-edit"></i> Edit
-                                        </button>
-                                        <!-- Delete button -->
-                                        <button type="button" class="btn btn-danger btn-sm deleteButton" th:onclick="'deleteAccount(\'' + ${account.rib} + '\');'">
-                                            <i class="fas fa-trash-alt"></i> Delete
-                                        </button>
-                                    </td>
-                                </tr>
-                                </tbody>
-                                <tfoot>
-                                <tr>
-                                    <th>RIB</th>
-                                    <th>Balance</th>
-                                    <th>Client</th>
-                                    <th>Cin</th>
-                                    <th>Actions</th>
-                                </tr>
-                                </tfoot>
-                            </table>
-                        </div>
+                <div class="card mb-4">
+                    <div class="card-header d-flex justify-content-end">
+                        <button class="btn btn-success" data-bs-target="#addAccountModal" data-bs-toggle="modal"
+                                type="button">
+                            <i class="fas fa-plus"></i> Add Account
+                        </button>
                     </div>
+                    <div class="card-body">
+                        <table id="datatablesSimple">
+                            <thead>
+                            <tr>
+                                <th>RIB</th>
+                                <th>Balance</th>
+                                <th>Client</th>
+                                <th>Cin</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="account : ${bankAccounts}" th:id="${'account-' + account.rib}">
+                                <td th:text="${account.rib}">RIB</td>
+                                <td th:text="${account.balance}">balance</td>
+                                <!-- Combine first name and last name into a single "Client" cell -->
+                                <td th:text="${account.client.firstName + ' ' + account.client.lastName}">Client Name
+                                </td>
+                                <td th:text="${account.client.cin}">Cin</td>
+                                <td>
+                                    <!-- Button to open the edit modal -->
+                                    <button class="btn btn-primary btn-sm editButton" data-bs-target="#editAccountModal"
+                                            data-bs-toggle="modal" type="button">
+                                        <i class="fas fa-edit"></i> Edit
+                                    </button>
+                                    <!-- Delete button -->
+                                    <button class="btn btn-danger btn-sm deleteButton" th:onclick="'deleteAccount(\'' + ${account.rib} + '\');'"
+                                            type="button">
+                                        <i class="fas fa-trash-alt"></i> Delete
+                                    </button>
+                                </td>
+                            </tr>
+                            </tbody>
+                            <tfoot>
+                            <tr>
+                                <th>RIB</th>
+                                <th>Balance</th>
+                                <th>Client</th>
+                                <th>Cin</th>
+                                <th>Actions</th>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
             </div>
             <!-- END REPLACE HERE -->
         </div>
@@ -73,81 +79,82 @@
 </div>
 
 <!-- Modal for editing an account -->
-<div class="modal fade" id="editAccountModal" tabindex="-1" aria-labelledby="editAccountModalLabel" aria-hidden="true">
+<div aria-hidden="true" aria-labelledby="editAccountModalLabel" class="modal fade" id="editAccountModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="editAccountModalLabel">Edit Bank Account</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
             </div>
             <!-- Modal body where input fields are located -->
             <div class="modal-body">
                 <!-- Readonly input to display the account RIB -->
                 <div class="mb-3">
-                    <label for="editRIB" class="form-label">RIB:</label>
-                    <input type="text" id="editRIB" name="rib" class="form-control" disabled  />
+                    <label class="form-label" for="editRIB">RIB:</label>
+                    <input class="form-control" disabled id="editRIB" name="rib" type="text"/>
                 </div>
                 <div class="mb-3">
-                    <label for="editbalance" class="form-label">balance:</label>
-                    <input type="number" id="editbalance" name="balance" class="form-control" />
+                    <label class="form-label" for="editbalance">balance:</label>
+                    <input class="form-control" id="editbalance" name="balance" type="number"/>
                 </div>
                 <!-- Combined Client Name field -->
                 <div class="mb-3">
-                    <label for="editClient" class="form-label">Client:</label>
-                    <input type="text" id="editClient" name="client" class="form-control" disabled />
+                    <label class="form-label" for="editClient">Client:</label>
+                    <input class="form-control" disabled id="editClient" name="client" type="text"/>
                 </div>
                 <div class="mb-3">
-                    <label for="editCin" class="form-label">CIN:</label>
-                    <input type="text" id="editCin" name="cin" class="form-control" disabled />
+                    <label class="form-label" for="editCin">CIN:</label>
+                    <input class="form-control" disabled id="editCin" name="cin" type="text"/>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="saveAccountChangesButton">Save changes</button>
+                <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+                <button class="btn btn-primary" id="saveAccountChangesButton" type="button">Save changes</button>
             </div>
         </div>
     </div>
 </div>
 
 
-
 <!-- Add Account Modal -->
-<div class="modal fade" id="addAccountModal" tabindex="-1" aria-labelledby="addAccountModalLabel" aria-hidden="true">
+<div aria-hidden="true" aria-labelledby="addAccountModalLabel" class="modal fade" id="addAccountModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addAccountModalLabel">Add New Bank Account</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
             </div>
             <!-- Start of form -->
             <form action="/accounts/save" method="post">
                 <div class="modal-body">
 
                     <div class="mb-3">
-                        <label for="newBalance" class="form-label">Balance:</label>
-                        <input type="number" id="newBalance" name="balance" class="form-control" required />
+                        <label class="form-label" for="newBalance">Balance:</label>
+                        <input class="form-control" id="newBalance" name="balance" required type="number"/>
                     </div>
                     <!-- Client select dropdown -->
                     <div class="mb-3">
-                        <label for="client" class="form-label">Client:</label>
-                        <input type="text" id="client" class="form-control" required />
-                        <input type="text" id="client-id" name="cin" hidden />
+                        <label class="form-label" for="client">Client:</label>
+                        <input class="form-control" id="client" required th:disabled="${client != null}"
+                               th:value="${client != null ? client.firstName + ' ' + client.lastName : ''}"
+                               type="text"/>
+
+                        <input hidden id="client-id" name="cin" th:value="${client != null ? client.cin : ''}"
+                               type="text"/>
                     </div>
+
                     <!-- Other form fields can be added here -->
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Cancel</button>
                     <!-- Submit button to post the form -->
-                    <button type="submit" class="btn btn-primary">Add Account</button>
+                    <button class="btn btn-primary" type="submit">Add Account</button>
                 </div>
             </form>
             <!-- End of form -->
         </div>
     </div>
 </div>
-
-
-
 
 
 <th:block th:replace="~{layout :: scripts}"></th:block>
